ainda n terminei esse negocio

--- a/paginas/menureceitas.html
+++ b/paginas/menureceitas.html
@@ -7,13 +7,13 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style>
         body{
-                background-color: black;
+                background-color: rgb(0, 0, 0);
             }
             h1{
-                color: white;
+                color: #ffffff;
                 text-align: center;
             }
-            ul{
+            nav{
                 display: flex;
                 justify-content:space-between;
             }
@@ -27,24 +27,43 @@
             H2{
                 color: white;
             }
+            ul{
+                color: white;
+            }
+            ol{
+                color: #ffffff;
+            }
     </style>
 </head>
 <body>
     <h1>Meu Livro de Receitas</h1>
         <nav>
-            <ul>
-                <li>
-                    <a href="../index.html">Home</a>
-                </li>
-                <li>
-                    <a href="menureceitas.html">Receitas</a>
-                </li>
-                <li>
-                    <a href="sobre.html">Sobre</a>
-                </li>
-            </ul>
+            <li>
+                <a href="../index.html">Home</a>
+            </li>
+            <li>
+                <a href="menureceitas.html">Receitas</a>
+            </li>
+            <li>
+                <a href="sobre.html">Sobre</a>
+            </li>
         </nav>
         <h2>Receitas:</h2>
-
+        <ul>
+            <li><a href="receitacarne.html">Carne</a></li>
+            <li><a href="receitaaves.html">Aves</a></li>
+            <li><a href="receitapeixe.html">Peixes</a></li>
+            <li><a href="receitamassa.html">Massas</a></li>
+            <li><a href="receitasalgado.html">Salgados</a></li>
+            <li><a href="receitadoce.html">Doce</a></li>
+        </ul>
+        <ol type="1">
+            <li>Pré-aqueça uma grelha, frigideira ou churrasqueira em fogo médio-alto.</li>
+            <li>Tempere os bifes de ambos os lados com sal, pimenta e uma pitada de alho em pó.</li>
+            <li>Pincele um pouco de azeite de oliva nos bifes para evitar que grudem na grelha.</li>
+            <li>Coloque os bifes na grelha pré-aquecida e cozinhe de acordo com o ponto de preferência (mal passado, ao ponto ou bem passado), virando uma vez durante o cozimento.</li>
+            <li>Retire os bifes da grelha quando estiverem prontos e deixe descansar por alguns minutos antes de servir.</li>
+            <li>Sirva os bifes grelhados com acompanhamentos de sua escolha, como salada, legumes cozidos ou arroz.</li>
+        </ol>
 </body>
 </html>
