--- a/paginas/receitaaves.html
+++ b/paginas/receitaaves.html
@@ -19,12 +19,13 @@
             }
             h3{
                 color: white;
-                text-align: center;
             }
             p{
                 color: white;
             }
             H2{
+                display: flex;
+                justify-content: center;
                 color: white;
             }
             ul{
@@ -33,11 +34,13 @@
             h4{
                 display: flex;
                 justify-content: end;
-
+            }
+            ol{
+                color: #ffffff;
             }
             </style>
 </head>
-<h4>
+<body>
     <h1>Meu Livro de Receitas</h1>
         <nav>
             <li>
@@ -50,7 +53,32 @@
                 <a href="sobre.html">Sobre</a>
             </li>
         </nav>
-        
+        <h2>Frango Assado com Limão e Ervas:</h2>
+        <center>
+            <img src="../imagens/ave.png" alt="frango assado">
+        </center>
+        <h3>Ingredientes:</h3>
+        <ul>
+            <li>4 pedaços de frango (coxas, sobrecoxas, peitos, etc.)</li>
+            <li>Sal e pimenta a gosto</li>
+            <li>Suco de 1 limão</li>
+            <li>Raspa de 1 limão</li>
+            <li>Ervas secas (como alecrim, tomilho, orégano) a gosto</li>
+            <li>Azeite de oliva</li>
+        </ul>
+        <h3>Instruções</h3>
+        <ol type="1">
+            <li>Pré-aqueça o forno a 200°C.</li>
+            <li>Lave e seque os pedaços de frango com papel toalha.</li>
+            <li>Tempere os pedaços de frango com sal, pimenta, suco de limão e raspa de limão. Deixe marinar por pelo menos 15 minutos para absorver os sabores.</li>
+            <li>Escolha as ervas secas de sua preferência e polvilhe sobre os pedaços de frango temperados.</li>
+            <li>Em uma assadeira, regue um pouco de azeite de oliva no fundo para evitar que o frango grude.</li>
+            <li>Coloque os pedaços de frango na assadeira, com a pele virada para cima.</li>
+            <li>Asse o frango no forno preaquecido por cerca de 30-40 minutos, ou até que a carne esteja cozida e a pele esteja dourada e crocante. O tempo pode variar dependendo do tamanho dos pedaços de frango.</li>
+            <li>Certifique-se de que o frango esteja completamente cozido (a temperatura interna deve atingir pelo menos 75°C) antes de retirá-lo do forno.</li>
+            <li>Retire o frango do forno e deixe descansar por alguns minutos antes de servir.</li>
+            <li>Sirva o frango assado com limão e ervas com acompanhamentos de sua escolha, como arroz, batatas assadas ou legumes cozidos.</li>
+        </ol>
         <h4><a href="menureceitas.html">Voltar</a></h4>
 </body>
 </html>
