--- a/paginas/receitacarne.html
+++ b/paginas/receitacarne.html
@@ -21,6 +21,8 @@
                 color: white;
             }
             H2{
+                display: flex;
+                justify-content: center;
                 color: white;
             }
             ul{
@@ -34,9 +36,12 @@
             h3{
                 color: #ffffff;
             }
-            
+            ol{
+                color: #ffffff;
+            }
             </style>
 </head>
+<body>
     <h1>Meu Livro de Receitas</h1>
         <nav>
             <li>
@@ -49,6 +54,7 @@
                 <a href="sobre.html">Sobre</a>
             </li>
         </nav>
+        <h2>Bife Grelhado com Tempero de Alho:</h2>
         <center>
         <img src="../imagens/carne.png" alt="carne">
         </center>
@@ -58,8 +64,16 @@
             <li>Sal e pimenta a gosto</li>
             <li>Alho em pó</li>
             <li>Azeite de oliva</li>
-                
         </ul>
+        <h3>Instruções:</h3>
+        <ol type="1">
+            <li>Pré-aqueça uma grelha, frigideira ou churrasqueira em fogo médio-alto.</li>
+            <li>Tempere os bifes de ambos os lados com sal, pimenta e uma pitada de alho em pó.</li>
+            <li>Pincele um pouco de azeite de oliva nos bifes para evitar que grudem na grelha.</li>
+            <li>Coloque os bifes na grelha pré-aquecida e cozinhe de acordo com o ponto de preferência (mal passado, ao ponto ou bem passado), virando uma vez durante o cozimento.</li>
+            <li>Retire os bifes da grelha quando estiverem prontos e deixe descansar por alguns minutos antes de servir.</li>
+            <li>Sirva os bifes grelhados com acompanhamentos de sua escolha, como salada, legumes cozidos ou arroz.</li>
+        </ol>
         <h4><a href="menureceitas.html">Voltar</a></h4>
 </body>
 </html>
