--- a/paginas/receitadoce.html
+++ b/paginas/receitadoce.html
@@ -19,12 +19,13 @@
             }
             h3{
                 color: white;
-                text-align: center;
             }
             p{
                 color: white;
             }
             H2{
+                display: flex;
+                justify-content: center;
                 color: white;
             }
             ul{
@@ -33,11 +34,12 @@
             h4{
                 display: flex;
                 justify-content: end;
-
+            }
+            ol{
+                color: #ffffff;
             }
             </style>
 </head>
-<h4>
     <h1>Meu Livro de Receitas</h1>
         <nav>
             <li>
@@ -50,7 +52,31 @@
                 <a href="sobre.html">Sobre</a>
             </li>
         </nav>
-        
+        <h2>Brigadeiro de whey</h2>
+            <center>
+                <img src="../imagens/doce.png" alt="leo stronda, brigadeiro de whey">
+            </center> 
+        <h3>Ingredientes:</h3>
+            <ul>
+                <li>1 xícara de whey protein em pó sabor chocolate (ou o sabor de sua preferência)</li>
+                <li>1/2 xícara de leite desnatado</li>
+                <li>2 colheres de sopa de cacau em pó (sem açúcar)</li>
+                <li>2 colheres de sopa de adoçante em pó (ou a gosto)</li>
+                <li>1 colher de sopa de manteiga de amendoim (opcional, para dar cremosidade)</li>
+                <li>Uma pitada de sal</li>
+            </ul>
+        <h3>Instruções:</h3>
+            <ol type="1">
+                <li>Em uma panela antiaderente, misture o whey protein em pó, o cacau em pó e o adoçante.</li>
+                <li>Adicione o leite desnatado e misture bem até obter uma mistura homogênea.</li>
+                <li>Coloque a panela em fogo médio e mexa constantemente com uma espátula de silicone para evitar que a mistura grude no fundo.</li>
+                <li>Continue mexendo até a mistura começar a engrossar e desgrudar do fundo da panela. Isso deve levar cerca de 5-7 minutos.</li>
+                <li>Se estiver usando a manteiga de amendoim, adicione-a à mistura e continue mexendo até que ela esteja completamente incorporada.</li>
+                <li>Retire a panela do fogo e deixe o brigadeiro esfriar um pouco.</li>
+                <li>Com as mãos levemente untadas com óleo de coco ou manteiga, modele pequenas porções da mistura em bolinhas.</li>
+                <li>Se desejar, você pode enrolar as bolinhas em um pouco de cacau em pó, coco ralado ou até mesmo em pedaços pequenos de nozes.</li>
+                <li>Coloque as bolinhas em forminhas de papel e deixe esfriar completamente antes de servir.</li>
+            </ol>
         <h4><a href="menureceitas.html">Voltar</a></h4>
 </body>
 </html>
