--- a/paginas/receitamassa.html
+++ b/paginas/receitamassa.html
@@ -1,5 +1,4 @@
-!DOCTYPE html>
-<html>
+<!DOCTYPE html>
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -19,13 +18,15 @@
             }
             h3{
                 color: white;
-                text-align: center;
+            
             }
             p{
                 color: white;
             }
-            H2{
+            h2{
+                display: flex;
                 color: white;
+                justify-content: center;
             }
             ul{
                 color: white;
@@ -33,11 +34,13 @@
             h4{
                 display: flex;
                 justify-content: end;
-
+            }
+            ol{
+                color: #ffffff;
             }
             </style>
 </head>
-<h4>
+<body>
     <h1>Meu Livro de Receitas</h1>
         <nav>
             <li>
@@ -50,7 +53,37 @@
                 <a href="sobre.html">Sobre</a>
             </li>
         </nav>
-        
+        <h2>Miojo Básico:</h2>
+        <center>
+            <img src="../imagens/massa.png" alt="miojo">
+        </center>
+        <h3>Ingredientes:</h3>
+        <ul>
+            <li>1 pacote de macarrão instantâneo (miojo)</li>
+            <li>Água</li>
+            <li>Tempero em pó do pacote de miojo</li>
+        </ul>
+        <h3>Instruções:</h3>
+        <ol type="1">
+            <li>Preparando o Miojo:</li>
+                <ul>
+                    <li>Leve uma panela ao fogo e adicione água suficiente para cozinhar o miojo. Geralmente, cerca de 2 xícaras de água são suficientes.</li>
+                    <li>Quando a água estiver fervendo, adicione o macarrão instantâneo.</li>
+                </ul>
+            <li>Cozinhando o Miojo:</li>
+                <ul>
+                    <li>Cozinhe o macarrão conforme as instruções da embalagem, que normalmente é de 2-3 minutos. O macarrão instantâneo cozinha rapidamente.</li>
+                </ul>
+            <li>Adicionando o Tempero:</li>
+                <ul>
+                    <li>Quando o macarrão estiver cozido, desligue o fogo.</li>
+                    <li>Adicione o tempero em pó que vem com o pacote de miojo. Mexa bem para distribuir o tempero.</li>
+                </ul>
+            <li>Servindo:</li>
+            <ul>
+                <li>Transfira o miojo temperado para um prato e sirva imediatamente.</li>
+            </ul>
+        </ol>
         <h4><a href="menureceitas.html">Voltar</a></h4>
 </body>
 </html>
