--- a/paginas/receitapeixe.html
+++ b/paginas/receitapeixe.html
@@ -19,12 +19,13 @@
             }
             h3{
                 color: white;
-                text-align: center;
             }
             p{
                 color: white;
             }
-            H2{
+            h2{
+                display: flex;
+                justify-content: center;
                 color: white;
             }
             ul{
@@ -33,11 +34,12 @@
             h4{
                 display: flex;
                 justify-content: end;
-
+            }
+            OL{
+                color: #ffffff;
             }
             </style>
 </head>
-<h4>
     <h1>Meu Livro de Receitas</h1>
         <nav>
             <li>
@@ -50,7 +52,31 @@
                 <a href="sobre.html">Sobre</a>
             </li>
         </nav>
-        
+        <h2>Filé de Peixe Grelhado com Molho de Limão:</h2> 
+        <center>
+            <img src="../imagens/peixe.png" alt="bolsonaro segurando um peixe">
+        </center>
+        <h3>Ingredientes:</h3>
+        <ul>
+            <li>Filés de peixe (como tilápia, pescada, linguado, etc.)</li>
+            <li>Sal e pimenta a gosto</li>
+            <li>Suco de 1 limão</li>
+            <li>Azeite de oliva</li>
+            <li>Salsa picada para decorar</li>
+        </ul>
+        <h3>Instruções:</h3>
+        <ol type="1">
+            <li>Pré-aqueça uma grelha, frigideira antiaderente ou churrasqueira em fogo médio-alto.</li>
+            <li>Lave os filés de peixe e seque-os com papel toalha.</li>
+            <li>Tempere os filés de peixe com sal, pimenta e suco de limão. Deixe marinar por alguns minutos para absorver os sabores.</li>
+            <li>Pincele um pouco de azeite de oliva sobre os filés de peixe para evitar que grudem na grelha.</li>
+            <li>Coloque os filés de peixe na grelha pré-aquecida e cozinhe por cerca de 3-4 minutos de cada lado, ou até que estejam cozidos e levemente dourados. O tempo pode variar dependendo da espessura dos filés.</li>
+            <li>Retire os filés de peixe da grelha e coloque-os em um prato.</li>
+            <li>Regue os filés de peixe com um pouco mais de suco de limão antes de servir.</li>
+            <li>Polvilhe salsa picada sobre os filés de peixe grelhados para dar um toque de frescor.</li>
+            <li>Sirva os filés de peixe grelhados com molho de limão com acompanhamentos de sua escolha, como arroz, legumes cozidos ou salada.</li>
+        </ol>
+
         <h4><a href="menureceitas.html">Voltar</a></h4>
 </body>
 </html>
