--- a/paginas/receitasalgado.html
+++ b/paginas/receitasalgado.html
@@ -19,12 +19,13 @@
             }
             h3{
                 color: white;
-                text-align: center;
             }
             p{
                 color: white;
             }
             H2{
+                display: flex;
+                justify-content: center;
                 color: white;
             }
             ul{
@@ -37,7 +38,6 @@
             }
             </style>
 </head>
-<h4>
     <h1>Meu Livro de Receitas</h1>
         <nav>
             <li>
@@ -50,7 +50,43 @@
                 <a href="sobre.html">Sobre</a>
             </li>
         </nav>
-        
+        <h2>Coxinha de Frango</h2>
+        <center>
+            <img src="../imagens/salgado.png" alt="coxinha de frango no formato de canarinho puto">
+        </center>
+        <h3>Ingredientes:</h3>
+            <ul>
+                <li>1 peito de frango cozido e desfiado</li>
+                <li>Massa pronta para coxinha (à venda em supermercados)</li>
+                <li>Óleo para fritar</li>
+            </ul>
+        <h3>Instruções:</h3>
+            <ol type="1">
+                <li>Preparando o Recheio:</li>
+                    <ul>
+                        <li>Cozinhe e desfie o peito de frango.</li>
+                        <li>Tempere o frango desfiado com sal, pimenta e temperos a gosto.</li>
+                    </ul>
+                <li>Montando as Coxinhas:</li>
+                    <ul>
+                        <li>Pegue um pouco de massa pronta para coxinha e achate-a na palma da mão.</li>
+                        <li>Coloque um pouco do frango desfiado no centro da massa.</li>
+                    </ul>
+                <li>Modelando e Fritando:</li>
+                    <ul>
+                        <li>Feche a massa ao redor do recheio, formando o formato de coxinha.</li>
+                        <li>Aqueça óleo em uma panela para fritura.</li>
+                        <li>Quando o óleo estiver quente, frite as coxinhas até ficarem douradas e crocantes.</li>
+                    </ul>
+                <li>Escorrendo e Servindo:</li>
+                    <ul>
+                        <li>Retire as coxinhas fritas e coloque-as sobre papel-toalha para escorrer o excesso de óleo.</li>
+                    </ul>
+                <li>Servindo:</li>
+                    <ul>
+                        <li>Sirva as coxinhas de frango quentes como um salgado delicioso.</li>
+                    </ul>
+            </ol>
         <h4><a href="menureceitas.html">Voltar</a></h4>
 </body>
 </html>
